@@ -6,3 +6,5 @@ license          = Perl_5
 [@AVAR]
 dist = Dist-Zilla-Plugin-VersionFromPrev
 
+[Prereq / Runtime]
+Version::Next = 0
