@@ -5,7 +5,7 @@ use Moose;
 
 sub min_version {
     my ($self, $parent) = @_;
-    return '0.01';
+    return '0.0.1';
 }
 
 __PACKAGE__->meta->make_immutable;
